Split the driver into controller + node binaries
The node and controller parts of the driver are fundamentally different.
The node part runs in a DaemonSet and can *only* run on a Hetzner Cloud
server instance. The controller by default runs in a Deployment, but it
can run anywhere, even outside of the cluster in advanced scenarios.

Thus the environmental requirements and assumptions for these two
components also differ. By splitting into two separate binaries, it's
easier to reason with these differences, and properly specialize them
appropriately.

This initial work does the split, and carves out an "app" package that
has the common initialization code (clients, loggers, metrics, etc). No
behaviour changes have been introduced yet, the node and the controller
should function exactly as they did before - just in different binaries.

Follow-up work will take advantage of this split.

--- a/deploy/kubernetes/hcloud-csi.yml
+++ b/deploy/kubernetes/hcloud-csi.yml
@@ -228,7 +228,9 @@ spec:
         volumeMounts:
         - mountPath: /run/csi
           name: socket-dir
-      - env:
+      - command:
+        - /bin/hcloud-csi-driver-controller
+        env:
         - name: CSI_ENDPOINT
           value: unix:///run/csi/socket
         - name: METRICS_ENDPOINT
@@ -245,7 +247,7 @@ spec:
             secretKeyRef:
               key: token
               name: hcloud-csi
-        image: hetznercloud/hcloud-csi-driver:1.6.0
+        image: hetznercloud/hcloud-csi-driver:latest
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 5
@@ -317,7 +319,9 @@ spec:
           name: plugin-dir
         - mountPath: /registration
           name: registration-dir
-      - env:
+      - command:
+        - /bin/hcloud-csi-driver-node
+        env:
         - name: CSI_ENDPOINT
           value: unix:///run/csi/socket
         - name: METRICS_ENDPOINT
@@ -334,7 +338,7 @@ spec:
             fieldRef:
               apiVersion: v1
               fieldPath: spec.nodeName
-        image: hetznercloud/hcloud-csi-driver:1.6.0
+        image: hetznercloud/hcloud-csi-driver:latest
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 5
