--- a/deploy/kubernetes/controller/deployment.yaml
+++ b/deploy/kubernetes/controller/deployment.yaml
@@ -34,8 +34,9 @@ spec:
         - name: socket-dir
           mountPath: /run/csi
       - name: hcloud-csi-driver
-        image: hetznercloud/hcloud-csi-driver:1.6.0
+        image: hetznercloud/hcloud-csi-driver:latest
         imagePullPolicy: Always
+        command: [/bin/hcloud-csi-driver-controller]
         env:
         - name: CSI_ENDPOINT
           value: unix:///run/csi/socket
