Rename secret for hcloud api token to `hcloud`
We want to unify the name of the token between the Cloud Controller Manager & the CSI Driver. This is already as a preparation for the upcoming version 2 of the csi driver.

Signed-off-by: Lukas Kämmerling <lukas.kaemmerling@hetzner-cloud.de>

--- a/deploy/kubernetes/controller/deployment.yaml
+++ b/deploy/kubernetes/controller/deployment.yaml
@@ -52,7 +52,7 @@ spec:
         - name: HCLOUD_TOKEN
           valueFrom:
             secretKeyRef:
-              name: hcloud-csi
+              name: hcloud
               key: token
         volumeMounts:
         - name: socket-dir
