--- a/deploy/kubernetes/node/daemonset.yaml
+++ b/deploy/kubernetes/node/daemonset.yaml
@@ -60,7 +60,7 @@ spec:
         - name: HCLOUD_TOKEN
           valueFrom:
             secretKeyRef:
-              name: hcloud-csi
+              name: hcloud
               key: token
         - name: KUBE_NODE_NAME
           valueFrom:
