--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,14 +37,19 @@ unit:
 k8s 1.22:
   <<: *k8se2e
   variables:
-    K8S_VERSION: k8s-1.22.0
+    K8S_VERSION: k8s-1.22.15
 
 k8s 1.23:
   <<: *k8se2e
   variables:
-    K8S_VERSION: k8s-1.23.8
+    K8S_VERSION: k8s-1.23.13
 
 k8s 1.24:
   <<: *k8se2e
   variables:
-    K8S_VERSION: k8s-1.24.2
+    K8S_VERSION: k8s-1.24.7
+
+k8s 1.25:
+  <<: *k8se2e
+  variables:
+    K8S_VERSION: k8s-1.25.3
