refactor(skaffold): update manifests to match v2+ resources
In v2 we made multiple changes to our deployment manifests that were not
mirrored in the skaffold patches for local development:

- Remove hcloud token from node
- Use Deployment instead of StatefulSet for controller

This commit updates the skaffold patches to (better) work with the new
version.

--- a/hack/kustomization.yaml
+++ b/hack/kustomization.yaml
@@ -14,19 +14,24 @@ patches:
         path: /spec/template/spec/containers/1/env/-
         value:
           name: LOG_LEVEL
-          value: info
-#      - op: replace
-#        path: /spec/template/spec/containers/1/env/2/valueFrom/secretKeyRef/name
-#        value: hcloud_token
+          value: debug
+      - op: add
+        path: /spec/template/spec/containers/1/env/-
+        value:
+          name: HCLOUD_DEBUG
+          value: "true"
+          
   - target:
-      kind: StatefulSet
+      kind: Deployment
       name: hcloud-csi-controller
     patch: |-
       - op: add
         path: /spec/template/spec/containers/3/env/-
         value:
           name: LOG_LEVEL
-          value: info
-      - op: replace
-        path: /spec/template/spec/containers/3/env/3/valueFrom/secretKeyRef/name
-        value: hcloud
+          value: debug
+      - op: add
+        path: /spec/template/spec/containers/3/env/-
+        value:
+          name: HCLOUD_DEBUG
+          value: "true"
