--- a/hack/kustomization.yaml
+++ b/hack/kustomization.yaml
@@ -6,27 +6,36 @@ kind: Kustomization
 resources:
   - ../deploy
 patches:
-  - target:
+  - patch: |-
       kind: DaemonSet
-      name: hcloud-csi-node
-    patch: |-
-      - op: add
-        path: /spec/template/spec/containers/1/env/-
-        value:
-          name: LOG_LEVEL
-          value: info
-#      - op: replace
-#        path: /spec/template/spec/containers/1/env/2/valueFrom/secretKeyRef/name
-#        value: hcloud_token
-  - target:
-      kind: StatefulSet
-      name: hcloud-csi-controller
-    patch: |-
-      - op: add
-        path: /spec/template/spec/containers/3/env/-
-        value:
-          name: LOG_LEVEL
-          value: info
-      - op: replace
-        path: /spec/template/spec/containers/3/env/3/valueFrom/secretKeyRef/name
-        value: hcloud
+      apiVersion: apps/v1
+      metadata:
+        name: hcloud-csi-node
+        namespace: kube-system
+      spec:
+        template:
+          spec:
+            containers:
+            - name: hcloud-csi-driver
+              env:
+              - name: LOG_LEVEL
+                value: info
+              # - name: HCLOUD_DEBUG
+              #   value: "true"
+
+  - patch: |-
+      kind: Deployment
+      apiVersion: apps/v1
+      metadata:
+        name: hcloud-csi-controller
+        namespace: kube-system
+      spec:
+        template:
+          spec:
+            containers:
+            - name: hcloud-csi-driver
+              env:
+              - name: LOG_LEVEL
+                value: info
+              # - name: HCLOUD_DEBUG
+              #   value: "true"
