--- a/deploy/kubernetes/controller/deployment.yaml
+++ b/deploy/kubernetes/controller/deployment.yaml
@@ -16,17 +16,19 @@ spec:
       serviceAccountName: hcloud-csi-controller
       containers:
       - name: csi-attacher
-        image: k8s.gcr.io/sig-storage/csi-attacher:v3.2.1
+        image: k8s.gcr.io/sig-storage/csi-attacher:v4.1.0
+        args:
+        - --default-fstype=ext4
         volumeMounts:
         - name: socket-dir
           mountPath: /run/csi
       - name: csi-resizer
-        image: k8s.gcr.io/sig-storage/csi-resizer:v1.2.0
+        image: k8s.gcr.io/sig-storage/csi-resizer:v1.7.0
         volumeMounts:
         - name: socket-dir
           mountPath: /run/csi
       - name: csi-provisioner
-        image: k8s.gcr.io/sig-storage/csi-provisioner:v2.2.2
+        image: k8s.gcr.io/sig-storage/csi-provisioner:v3.4.0
         args:
         - --feature-gates=Topology=true
         - --default-fstype=ext4
@@ -73,7 +75,7 @@ spec:
           periodSeconds: 2
       - name: liveness-probe
         imagePullPolicy: Always
-        image: k8s.gcr.io/sig-storage/livenessprobe:v2.3.0
+        image: k8s.gcr.io/sig-storage/livenessprobe:v2.9.0
         volumeMounts:
         - mountPath: /run/csi
           name: socket-dir
