--- a/.github/workflows/publish_on_tag.yml
+++ b/.github/workflows/publish_on_tag.yml
@@ -16,21 +16,6 @@ jobs:
         with:
           go-version: 1.19
 
-      - id: Export RELEASE_VERSION
-        run: echo "RELEASE_VERSION=${GITHUB_REF:11}" >> $GITHUB_ENV
-
-      - name: update pushed tag
-        run: |
-          sed -i -e "s#: .*/hcloud-csi-driver:latest#: ${{ github.repository_owner }}/hcloud-csi-driver:v$RELEASE_VERSION#" deploy/kubernetes/hcloud-csi.yml
-          sed -i -e "s/PluginVersion = \".*\"$/PluginVersion = \"$RELEASE_VERSION\"/g" driver/driver.go
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add .
-          git commit -m "Update version tags to $RELEASE_VERSION"
-          git tag -d v$RELEASE_VERSION
-          git tag v$RELEASE_VERSION
-          git push origin v$RELEASE_VERSION -f
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
@@ -46,9 +31,9 @@ jobs:
       - name: "make docker plugin"
         run: |
           cd deploy/docker-swarm/pkg
-          make push PLUGIN_NAME=${{ github.repository_owner }}/hcloud-csi-driver PLUGIN_TAG=$RELEASE_VERSION-swarm ARCH=amd64
-          make push PLUGIN_NAME=${{ github.repository_owner }}/hcloud-csi-driver PLUGIN_TAG=$RELEASE_VERSION-swarm-amd64 ARCH=amd64
-          make push PLUGIN_NAME=${{ github.repository_owner }}/hcloud-csi-driver PLUGIN_TAG=$RELEASE_VERSION-swarm-arm64 ARCH=arm64
+          make push PLUGIN_NAME=${{ github.repository_owner }}/hcloud-csi-driver PLUGIN_TAG=${{ github.ref_name }}-swarm ARCH=amd64
+          make push PLUGIN_NAME=${{ github.repository_owner }}/hcloud-csi-driver PLUGIN_TAG=${{ github.ref_name }}-swarm-amd64 ARCH=amd64
+          make push PLUGIN_NAME=${{ github.repository_owner }}/hcloud-csi-driver PLUGIN_TAG=${{ github.ref_name }}-swarm-arm64 ARCH=arm64
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v4
