--- a/.github/workflows/publish_on_tag.yml
+++ b/.github/workflows/publish_on_tag.yml
@@ -42,6 +42,11 @@ jobs:
           tags: ${{ github.repository_owner }}/hcloud-csi-driver:${{ steps.release_version.outputs.value}}
           cache-from: type=registry,ref=${{ github.repository_owner }}/hcloud-csi-driver:buildcache
           cache-to: type=registry,ref=${{ github.repository_owner }}/hcloud-csi-driver:buildcache,mode=max
+      - name: "make docker plugin"
+        RELEASE_VERSION: ${{ steps.release_version.outputs.value}}
+        run: |
+          cd deploy/docker-swarm/pkg
+          make push PLUGIN_NAME=hetznercloud/csi-driver-docker PLUGIN_TAG=$RELEASE_VERSION
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
