--- a/deploy/docker-swarm/pkg/Makefile
+++ b/deploy/docker-swarm/pkg/Makefile
@@ -1,6 +1,5 @@
-# FIXME: change this
-PLUGIN_NAME = hetznercloud/csi-driver-docker
-PLUGIN_TAG ?= $(shell git describe --tags --exact-match 2> /dev/null || echo dev)
+PLUGIN_NAME = hetznercloud/csi-driver
+PLUGIN_TAG ?= $(shell git describe --tags --exact-match 2> /dev/null || echo dev)-swarm
 
 all: create
 
