--- a/.github/workflows/publish_on_tag.yml
+++ b/.github/workflows/publish_on_tag.yml
@@ -43,10 +43,11 @@ jobs:
           cache-from: type=registry,ref=${{ github.repository_owner }}/hcloud-csi-driver:buildcache
           cache-to: type=registry,ref=${{ github.repository_owner }}/hcloud-csi-driver:buildcache,mode=max
       - name: "make docker plugin"
-        RELEASE_VERSION: ${{ steps.release_version.outputs.value}}
+        env:
+          RELEASE_VERSION: ${{ steps.release_version.outputs.value}}
         run: |
           cd deploy/docker-swarm/pkg
-          make push PLUGIN_NAME=hetznercloud/csi-driver-docker PLUGIN_TAG=$RELEASE_VERSION
+          make push PLUGIN_NAME=hetznercloud/csi-driver PLUGIN_TAG=$RELEASE_VERSION-swarm
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
