--- a/deploy/docker-swarm/pkg/Dockerfile
+++ b/deploy/docker-swarm/pkg/Dockerfile
@@ -4,9 +4,7 @@ ADD go.mod go.sum /csi/
 RUN go mod download
 ADD . /csi/
 RUN ls -al
-# `skaffold debug` sets SKAFFOLD_GO_GCFLAGS to disable compiler optimizations
-ARG SKAFFOLD_GO_GCFLAGS
-RUN GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -gcflags="${SKAFFOLD_GO_GCFLAGS}" -o aio.bin github.com/hetznercloud/csi-driver/cmd/aio
+RUN GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -o aio.bin github.com/hetznercloud/csi-driver/cmd/aio
 
 FROM --platform=linux/amd64 alpine:3.15
 RUN apk add --no-cache ca-certificates e2fsprogs xfsprogs blkid xfsprogs-extra e2fsprogs-extra btrfs-progs cryptsetup
