feat: Add helm chart
Co-authored-by: Julian Tölle <julian.toelle@hetzner-cloud.de>

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -23,3 +23,5 @@ jobs:
             deploy/kubernetes/hcloud-csi.yml
             deploy/kubernetes/controller/deployment.yaml
             deploy/kubernetes/node/daemonset.yaml
+            chart/Chart.yaml
+            chart/values.yaml
