ci: fix goreleaser arguments

--- a/.github/workflows/publish_on_master.yml
+++ b/.github/workflows/publish_on_master.yml
@@ -35,6 +35,6 @@ jobs:
         with:
           distribution: goreleaser
           version: latest
-          args: snapshot --rm-dist
+          args: release --snapshot --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
