--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -7,6 +7,8 @@ builds:
       - linux
     goarch:
       - amd64
+      - arm64
+      - arm
     binary: controller.bin
   - id: node
     main: ./cmd/node
@@ -16,6 +18,8 @@ builds:
       - linux
     goarch:
       - amd64
+      - arm64
+      - arm
     binary: node.bin
 
 dockers:
@@ -25,8 +29,22 @@ dockers:
     image_templates: ["hetznercloud/hcloud-csi-driver:{{ if not .IsSnapshot }}v{{ end }}{{ .Version }}-amd64"]
     use: buildx
 
+  - build_flag_templates: [--platform=linux/arm64]
+    dockerfile: Dockerfile
+    goarch: arm64
+    image_templates: ["hetznercloud/hcloud-csi-driver:{{ if not .IsSnapshot }}v{{ end }}{{ .Version }}-arm64v8"]
+    use: buildx
+
+  - build_flag_templates: [--platform=linux/arm/v6]
+    dockerfile: Dockerfile
+    goarch: arm
+    goarm: 6
+    image_templates: ["hetznercloud/hcloud-csi-driver:{{ if not .IsSnapshot }}v{{ end }}{{ .Version }}-armv6"]
+    use: buildx
+
 docker_manifests:
   - name_template: hetznercloud/hcloud-csi-driver:{{ if not .IsSnapshot }}v{{ end }}{{ .Version }}
     image_templates:
       - hetznercloud/hcloud-csi-driver:{{ if not .IsSnapshot }}v{{ end }}{{ .Version }}-amd64
-
+      - hetznercloud/hcloud-csi-driver:{{ if not .IsSnapshot }}v{{ end }}{{ .Version }}-arm64v8
+      - hetznercloud/hcloud-csi-driver:{{ if not .IsSnapshot }}v{{ end }}{{ .Version }}-armv6
