--- a/.github/workflows/publish_on_tag.yml
+++ b/.github/workflows/publish_on_tag.yml
@@ -34,6 +34,9 @@ jobs:
           git tag v$RELEASE_VERSION
           git push origin v$RELEASE_VERSION -f
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
