--- a/.github/workflows/test_e2e.yml
+++ b/.github/workflows/test_e2e.yml
@@ -3,6 +3,9 @@ on: [pull_request]
 concurrency: ci-${{ github.ref }}
 jobs:
   test-kubernetes:
+    name: k3s ${{ matrix.k3s }}
+    permissions:
+      id-token: write
     runs-on: ubuntu-latest
     strategy:
       # The e2e tests are flaky and often one of the jobs fails. The default setting
@@ -18,7 +21,6 @@ jobs:
             k8s-test: v1.26.4
           - k3s: v1.27
             k8s-test: v1.27.1
-    name: k3s ${{ matrix.k3s }}
     steps:
     - uses: actions/setup-go@v2
       with:
@@ -26,20 +28,20 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
+
     - name: HCLOUD_TOKEN
       env:
         HCLOUD_TOKEN: ${{ secrets.HCLOUD_TOKEN }}
-        TTS_TOKEN: ${{ secrets.TTS_TOKEN }}
       run: |
-        set -ueo pipefail
-        if [[ "${HCLOUD_TOKEN:-}" != "" ]]; then
-          echo "HCLOUD_TOKEN=$HCLOUD_TOKEN" >> "$GITHUB_ENV"
-        elif [[ "${TTS_TOKEN:-}" != "" ]]; then
-                  token="$(./script/get-token.sh)"
-                  echo "::add-mask::$token"
-                  echo "HCLOUD_TOKEN=$token" >> "$GITHUB_ENV"
-        else
-          echo "::error ::Couldn't determine HCLOUD_TOKEN. Check that repository secrets are setup correctly."
+        echo "HCLOUD_TOKEN=$HCLOUD_TOKEN" >> "$GITHUB_ENV"
+
+    - uses: hetznercloud/tps-action@main
+      if: ${{ vars.USE_TPS }}
+
+    - name: check HCLOUD_TOKEN
+      run: |
+        if [[ "${HCLOUD_TOKEN:-}" == "" ]]; then
+          echo "::error ::Couldn't determine HCLOUD_TOKEN. Are repository secrets correctly set?"
           exit 1
         fi
 
