--- a/.github/workflows/test_e2e.yml
+++ b/.github/workflows/test_e2e.yml
@@ -3,6 +3,9 @@ on: [pull_request]
 concurrency: ci-${{ github.ref }}
 jobs:
   test-kubernetes:
+    name: k3s ${{ matrix.k3s }}
+    permissions:
+      id-token: write
     runs-on: ubuntu-latest
     strategy:
       # The e2e tests are flaky and often one of the jobs fails. The default setting
@@ -18,7 +21,6 @@ jobs:
             k8s-test: v1.26.4
           - k3s: v1.27
             k8s-test: v1.27.1
-    name: k3s ${{ matrix.k3s }}
     steps:
     - uses: actions/setup-go@v2
       with:
@@ -26,22 +28,10 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - name: HCLOUD_TOKEN
-      env:
-        HCLOUD_TOKEN: ${{ secrets.HCLOUD_TOKEN }}
-        TTS_TOKEN: ${{ secrets.TTS_TOKEN }}
-      run: |
-        set -ueo pipefail
-        if [[ "${HCLOUD_TOKEN:-}" != "" ]]; then
-          echo "HCLOUD_TOKEN=$HCLOUD_TOKEN" >> "$GITHUB_ENV"
-        elif [[ "${TTS_TOKEN:-}" != "" ]]; then
-                  token="$(./script/get-token.sh)"
-                  echo "::add-mask::$token"
-                  echo "HCLOUD_TOKEN=$token" >> "$GITHUB_ENV"
-        else
-          echo "::error ::Couldn't determine HCLOUD_TOKEN. Check that repository secrets are setup correctly."
-          exit 1
-        fi
+
+    - uses: hetznercloud/tps-action@main
+      with:
+        token: ${{ secrets.HCLOUD_TOKEN  }}
 
     - uses: 3bit/setup-hcloud@v2
     - uses: yokawasa/action-setup-kube-tools@v0.9.2
@@ -62,7 +52,7 @@ jobs:
       run: |
         curl -sLS https://get.k3sup.dev | sh
 
-        trap "hack/dev-down.sh; ./script/delete-token.sh $HCLOUD_TOKEN" EXIT
+        trap "hack/dev-down.sh" EXIT
         source <(hack/dev-up.sh)
 
         skaffold build --tag="e2e-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}"
