--- a/.github/workflows/test_e2e.yml
+++ b/.github/workflows/test_e2e.yml
@@ -1,5 +1,8 @@
 name: Run e2e tests
-on: [pull_request]
+on:
+  pull_request: {}
+  push:
+    branches: [main]
 concurrency: ci-${{ github.ref }}
 jobs:
   test-kubernetes:
