--- a/.github/workflows/publish_on_tag.yml
+++ b/.github/workflows/publish_on_tag.yml
@@ -46,7 +46,9 @@ jobs:
       - name: "make docker plugin"
         run: |
           cd deploy/docker-swarm/pkg
-          make push PLUGIN_NAME=${{ github.repository_owner }}/hcloud-csi-driver PLUGIN_TAG=$RELEASE_VERSION-swarm
+          make push PLUGIN_NAME=${{ github.repository_owner }}/hcloud-csi-driver PLUGIN_TAG=$RELEASE_VERSION-swarm ARCH=amd64
+          make push PLUGIN_NAME=${{ github.repository_owner }}/hcloud-csi-driver PLUGIN_TAG=$RELEASE_VERSION-swarm-amd64 ARCH=amd64
+          make push PLUGIN_NAME=${{ github.repository_owner }}/hcloud-csi-driver PLUGIN_TAG=$RELEASE_VERSION-swarm-arm64 ARCH=arm64
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v4
