--- a/deploy/docker-swarm/pkg/Dockerfile
+++ b/deploy/docker-swarm/pkg/Dockerfile
@@ -4,7 +4,7 @@ ADD go.mod go.sum /csi/
 RUN go mod download
 ADD . /csi/
 RUN ls -al
-RUN GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -o aio.bin github.com/hetznercloud/csi-driver/cmd/aio
+RUN CGO_ENABLED=0 go build -o aio.bin github.com/hetznercloud/csi-driver/cmd/aio
 
 FROM --platform=$TARGETPLATFORM alpine:3.15
 RUN apk add --no-cache ca-certificates e2fsprogs xfsprogs blkid xfsprogs-extra e2fsprogs-extra btrfs-progs cryptsetup
