--- a/.github/workflows/publish_on_master.yml
+++ b/.github/workflows/publish_on_master.yml
@@ -31,7 +31,9 @@ jobs:
       - name: "make docker plugin"
         run: |
           cd deploy/docker-swarm/pkg
-          make push PLUGIN_NAME=${{ github.repository_owner }}/hcloud-csi-driver PLUGIN_TAG=latest-swarm
+          make push PLUGIN_NAME=${{ github.repository_owner }}/hcloud-csi-driver PLUGIN_TAG=latest-swarm ARCH=amd64
+          make push PLUGIN_NAME=${{ github.repository_owner }}/hcloud-csi-driver PLUGIN_TAG=latest-swarm-amd64 ARCH=amd64
+          make push PLUGIN_NAME=${{ github.repository_owner }}/hcloud-csi-driver PLUGIN_TAG=latest-swarm-arm64 ARCH=arm64
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v4
