feat: test against Kubernetes 1.28 and drop 1.24

--- a/test/e2e/kubernetes/testdriver-1.25.yaml
+++ b/test/e2e/kubernetes/testdriver-1.25.yaml
@@ -8,7 +8,7 @@ DriverInfo:
   Capabilities:
     # Available capabilities are defined in the kubernetes repositories, make
     # sure to select the corresponding k8s version:
-    # https://github.com/kubernetes/kubernetes/blob/release-1.23/test/e2e/storage/framework/testdriver.go#L150
+    # https://github.com/kubernetes/kubernetes/blob/release-1.25/test/e2e/storage/framework/testdriver.go#L150
     persistence: true
     block: true
     fsGroup: true
@@ -21,6 +21,7 @@ DriverInfo:
     controllerExpansion: true
     nodeExpansion: true
     onlineExpansion: false
+    offlineExpansion: true
     volumeLimits: false
     singleNodeVolume: true
     topology: true
