--- a/chart/templates/controller/deployment.yaml
+++ b/chart/templates/controller/deployment.yaml
@@ -7,6 +7,7 @@ metadata:
   namespace: {{ include "common.names.namespace" . | quote }}
   labels: {{- include "common.labels.standard" . | nindent 4 }}
     app.kubernetes.io/component: controller
+    app: hcloud-csi-controller # Compatibility with old manifests
     {{- if .Values.commonLabels }}
     {{- include "common.tplvalues.render" ( dict "value" .Values.commonLabels "context" $ ) | nindent 4 }}
     {{- end }}
@@ -19,8 +20,13 @@ spec:
   strategy: {{- toYaml .Values.controller.updateStrategy | nindent 4 }}
   {{- end }}
   selector:
-    matchLabels: {{- include "common.labels.matchLabels" . | nindent 6 }}
+    matchLabels:
+      {{- if .Values.controller.matchLabelsOverride }}
+      {{- toYaml .Values.controller.matchLabelsOverride | nindent 6 }}
+      {{- else }}
+      {{- include "common.labels.matchLabels" . | nindent 6 }}
       app.kubernetes.io/component: controller
+      {{- end }}
   template:
     metadata:
       {{- if .Values.controller.podAnnotations }}
