--- a/.github/workflows/test_e2e.yml
+++ b/.github/workflows/test_e2e.yml
@@ -27,7 +27,7 @@ jobs:
     steps:
     - uses: actions/setup-go@v4
       with:
-        go-version: '1.19'
+        go-version: "1.21"
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
